add how to config eclim