@@ -7,3 +7,17 @@
 ```git
 git clone --recursive https://github.com/zewait/emacs-config.git
 ```
+
+## Config
+* [eclim](http://www.skybert.net/emacs/java)
+> ~/.eclimrc
+> #workspace dir
+> osgi.instance.area.default=@user.home/workspace/eclipse
+> 
+> ##below can ignore
+> #increase heap size
+> -Xmx256M
+>
+> #increase perm gen size
+> -XX:PermSize=64
+> -XX:MaxPermSize=128m
